--- a/UIT_Project/LTUDM_DauTruong100/.project
+++ b/UIT_Project/LTUDM_DauTruong100/.project
@@ -2,7 +2,7 @@
 <projectDescription>
 	<name>LTUDM_DauTruong100</name>
 	<comment></comment>
-	<projects>
+	<projects>sgafsd
 	</projects>
 	<buildSpec>
 		<buildCommand>
