--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+asd
 *.imlasdcdasf
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
