--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 asd
-*.imlasdcdasf
+*.imlasdcdasfh
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/app/app.iml
