--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 asd
-*.imlasdcdasfh
+*.imlasdcdasfhuyi
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/app/app.iml
