--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 asd
-*.imlasdcdasfhuyi
+*.imlasdcdasfhuyixZ
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/.idea/gradle.xml
 Android/Android_AugmentedReality/AugmentedReality/app/app.iml
